frontend/test/should_fail/cast_edge_types.grg
using cast_model;

rule r {
	-e:E->;
	
	modify {
	---
		eval {
			def -unrelE:UnrelE-> = (UnrelE)e;
		}
	}
}
